force-app/main/default/objects/Contract/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Main_Services_of_Interest</valueSetName>
    </valueSet>
</CustomField>