force-app/main/default/objects/Contract/fields/PSAName__c.field-meta.xml
<CustomField>
    <fullName>PSAName__c</fullName>
    <label>PSA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>