force-app/main/default/objects/Contract/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Program__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>V5 + Addedum 1</fullName>
            </value>
            <value>
                <fullName>V5</fullName>
            </value>
            <value>
                <fullName>V5 2021</fullName>
            </value>
            <value>
                <fullName>V5 2021 + Addendum 1</fullName>
            </value>
            <value>
                <fullName>V6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>